--- a/GitHubClone/GitHubClone/Base.lproj/Main.storyboard
+++ b/GitHubClone/GitHubClone/Base.lproj/Main.storyboard
@@ -134,32 +134,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Repo Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EIA-i3-GmU">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Repo Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EIA-i3-GmU">
                                 <rect key="frame" x="8" y="69" width="359" height="31.5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Repo Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SxK-5A-a42">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Repo Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SxK-5A-a42">
                                 <rect key="frame" x="8" y="112.5" width="132" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Language" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iab-9I-P3D">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Language" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iab-9I-P3D">
                                 <rect key="frame" x="8" y="145.5" width="76" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stars" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rvO-Nu-ud9">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Stars" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rvO-Nu-ud9">
                                 <rect key="frame" x="8" y="178.5" width="40" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="isFork" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2o0-mr-Vhh">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="isFork" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2o0-mr-Vhh">
                                 <rect key="frame" x="8" y="211.5" width="47" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Created: date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="plj-cz-Ntn">
+                                <rect key="frame" x="8" y="244.5" width="105" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -174,32 +186,20 @@
                                     <segue destination="1fk-lF-IL5" kind="presentation" identifier="RepoViewController" id="ZT9-Oq-qUa"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Created: date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="plj-cz-Ntn">
-                                <rect key="frame" x="8" y="244.5" width="105" height="21"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bBk-XI-cDg">
+                                <rect key="frame" x="260" y="28" width="107" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <state key="normal" title="More Details"/>
+                                <connections>
+                                    <action selector="moreDetailsPressed:" destination="yYq-3y-gT4" eventType="touchUpInside" id="dq8-Ex-QzH"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.61410054780000001" blue="0.50454625600000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="SxK-5A-a42" firstAttribute="top" secondItem="EIA-i3-GmU" secondAttribute="bottom" constant="12" id="23a-SN-Kk3"/>
-                            <constraint firstItem="rvO-Nu-ud9" firstAttribute="top" secondItem="Iab-9I-P3D" secondAttribute="bottom" constant="12" id="6d0-On-B4Y"/>
-                            <constraint firstItem="EIA-i3-GmU" firstAttribute="top" secondItem="T23-0f-UeC" secondAttribute="bottom" constant="8" id="Ax7-mF-W7k"/>
-                            <constraint firstItem="Iab-9I-P3D" firstAttribute="top" secondItem="SxK-5A-a42" secondAttribute="bottom" constant="12" id="Ia2-j2-KcZ"/>
-                            <constraint firstItem="EIA-i3-GmU" firstAttribute="leading" secondItem="yfQ-zT-nJK" secondAttribute="leading" constant="8" id="KMv-lf-VE1"/>
-                            <constraint firstItem="plj-cz-Ntn" firstAttribute="top" secondItem="2o0-mr-Vhh" secondAttribute="bottom" constant="12" id="L7T-VP-RQw"/>
-                            <constraint firstItem="EIA-i3-GmU" firstAttribute="leading" secondItem="yfQ-zT-nJK" secondAttribute="leading" constant="8" id="Ofj-LI-hxa"/>
-                            <constraint firstItem="T23-0f-UeC" firstAttribute="top" secondItem="trU-1N-nH7" secondAttribute="bottom" constant="8" id="RSv-f2-kl8"/>
-                            <constraint firstItem="Iab-9I-P3D" firstAttribute="leading" secondItem="yfQ-zT-nJK" secondAttribute="leading" constant="8" id="UW4-5i-X9F"/>
-                            <constraint firstAttribute="trailing" secondItem="EIA-i3-GmU" secondAttribute="trailing" constant="8" id="Vp3-kb-jfe"/>
-                            <constraint firstItem="rvO-Nu-ud9" firstAttribute="leading" secondItem="yfQ-zT-nJK" secondAttribute="leading" constant="8" id="atN-WL-AAC"/>
-                            <constraint firstItem="2o0-mr-Vhh" firstAttribute="leading" secondItem="yfQ-zT-nJK" secondAttribute="leading" constant="8" id="hKY-FU-aTR"/>
-                            <constraint firstItem="2o0-mr-Vhh" firstAttribute="top" secondItem="rvO-Nu-ud9" secondAttribute="bottom" constant="12" id="l0X-z0-x9x"/>
-                            <constraint firstItem="EIA-i3-GmU" firstAttribute="top" secondItem="T23-0f-UeC" secondAttribute="bottom" constant="8" id="oSH-1P-CsV"/>
-                            <constraint firstItem="T23-0f-UeC" firstAttribute="leading" secondItem="yfQ-zT-nJK" secondAttribute="leading" constant="8" id="v14-2R-FBG"/>
-                            <constraint firstItem="SxK-5A-a42" firstAttribute="leading" secondItem="yfQ-zT-nJK" secondAttribute="leading" constant="8" id="w9N-dk-M3B"/>
-                            <constraint firstItem="plj-cz-Ntn" firstAttribute="leading" secondItem="yfQ-zT-nJK" secondAttribute="leading" constant="8" id="wXt-Ij-GRn"/>
+                            <constraint firstItem="T23-0f-UeC" firstAttribute="top" secondItem="trU-1N-nH7" secondAttribute="bottom" constant="8" id="dZ2-Yy-FY2"/>
+                            <constraint firstItem="T23-0f-UeC" firstAttribute="leading" secondItem="yfQ-zT-nJK" secondAttribute="leading" constant="8" id="x9f-Dv-R3Y"/>
                         </constraints>
                     </view>
                     <connections>
@@ -213,7 +213,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zwh-KW-Mfx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1924" y="124"/>
+            <point key="canvasLocation" x="1924" y="123.68815592203899"/>
         </scene>
     </scenes>
     <resources>
